updated profile pic and mobile view info

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" integrity="sha512-9xKTRVabjVeZmc+GUW8GgSmcREDunMM+Dt/GrzchfN8tkwHizc5RP4Ok/MXFFy5rIjJjzhndFScTceq5e6GvVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div class="small-screen">
+        Please view this site in bigger screen i.e Laptops, Desktops for better experience
+    </div>
     <div class="body-container">
         <div class="side-navbar">
             <ul class="sidebar-links">
-                <img src="./me.png" alt="img" srcset="" class="my-img">
+                <img src="./hover-me.png" alt="img" srcset="" class="my-img">
                 <li class="sidebar-item nav-about"><a href="#about">About</a></li>
                 <li class="sidebar-item nav-experience"><a href="#experience">Experience</a></li>
                 <li class="sidebar-item nav-projects"><a href="#projects">Projects</a></li>
