--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="main-info">
             <div id="about" class="about">
-                <h4 class="about-heading">I am a <span class="about-role">Full-Stack Developer</span>, Interested in building functional website</h4>
+                <h4 class="about-heading">I am a <span class="about-role">Full-Stack Developer</span>, Interested in building functional websites</h4>
                 <h6 class="about-intro"> Hi, I am Dhanush, Great to see you here.</h6>
                 <div class="about-btn">
                     <a href="#experience" class="about-btn-item about-btn-1">Learn More</a>
