--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                             <div class="experience-inner">
                                 <h3>B TECH in Computer Science & Enginnering</h3>
                                 <h5>Central University, Bilaspur  (2020 - 2024)</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p>
+<!--                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p> -->
                             </div>
                             <div class="experience-inner">
                                 <h3>Intermediate in MPC</h3>
                                 <h5>Sri Chaitanya College  (2018 - 2020)</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p>
+<!--                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p> -->
                             </div>
                         </div>
                     </div>
@@ -57,12 +57,12 @@
                             <div class="experience-inner ">
                                 <h3>Software Engineer</h3>
                                 <h5>HealthOFin  (2024 - Present)</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p>
+<!--                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p> -->
                             </div>
                             <div class="experience-inner ">
                                 <h3>Full-Stack Developer Intern</h3>
                                 <h5>TXON  (Aug 2023 - Oct 2023)</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p>
+<!--                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p> -->
                             </div>
                         </div>
                     </div>
