--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="experience-block">
                     <div class="experience-block-left">
                         <div class="experience-item">
-                            <h2>Experience</h2>
+                            <h2>Education</h2>
                             <div class="experience-inner">
                                 <h3>B TECH in Computer Science & Enginnering</h3>
                                 <h5>Central University, Bilaspur  (2020 - 2024)</h5>
@@ -53,15 +53,15 @@
                     </div>
                     <div class="experience-block-right">
                         <div class="education-item education-item-right">
-                            <h2>Education</h2>
-                            <div class="experience-inner ">
+                            <h2>Experience</h2>
+<!--                             <div class="experience-inner ">
                                 <h3>Software Engineer</h3>
                                 <h5>HealthOFin  (2024 - Present)</h5>
-<!--                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p> -->
-                            </div>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p>
+                            </div> -->
                             <div class="experience-inner ">
                                 <h3>Full-Stack Developer Intern</h3>
-                                <h5>TXON  (Aug 2023 - Oct 2023)</h5>
+                                <h5>TXON  (Aug - Oct)</h5>
 <!--                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p> -->
                             </div>
                         </div>
@@ -105,10 +105,10 @@
                                 2024
                             </h6>
                             <h3>
-                                Ticketing Application
+                                ChatBOX
                             </h3>
-                            <p>Applictaion for creating and maintaining work tickets</p>
-                            <a href="https://github.com/ydhanush8/Ticketing-Application" class="project-card-more-btn">More</a>
+                            <p>AI-powered chat platform with unique folder-based system to organize and manage conversations efficiently.</p>
+                            <a href="https://github.com/ydhanush8/ChatBOX" class="project-card-more-btn">More</a>
                         </div>
                     </div>
                 </div>
@@ -120,15 +120,15 @@
                     <div class="skills-technical">
                         <h2>Technical Skills</h2>
                         <div class="skills-items-list">
-                            <button type="submit" class="skill-item"><a href="" class="s-item">HTML</a></button>
-                            <button type="submit" class="skill-item"><a href="" class="s-item">CSS</a></button>
-                            <button type="submit" class="skill-item"><a href="" class="s-item">Bootstrap</a></button>
+                            <button type="submit" class="skill-item"><a href="" class="s-item">Python</a></button>
                             <button type="submit" class="skill-item"><a href="" class="s-item">Javascript</a></button>
                             <button type="submit" class="skill-item"><a href="" class="s-item">React JS</a></button>
                             <button type="submit" class="skill-item"><a href="" class="s-item">Node JS</a></button>
                             <button type="submit" class="skill-item"><a href="" class="s-item">Express JS</a></button>
                             <button type="submit" class="skill-item"><a href="" class="s-item">MongoDB</a></button>
-                            <button type="submit" class="skill-item"><a href="" class="s-item">PostgreSQL</a></button>
+                            <button type="submit" class="skill-item"><a href="" class="s-item">HTML</a></button>
+                            <button type="submit" class="skill-item"><a href="" class="s-item">CSS</a></button>
+                            <button type="submit" class="skill-item"><a href="" class="s-item">Bootstrap</a></button>
                             <button type="submit" class="skill-item"><a href="" class="s-item">Tailwind CSS</a></button>
                             <button type="submit" class="skill-item"><a href="" class="s-item">Java</a></button>
                             <button type="submit" class="skill-item"><a href="" class="s-item">Git</a></button>
