--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             </div> -->
                             <div class="experience-inner ">
                                 <h3>Full-Stack Developer Intern</h3>
-                                <h5>TXON  (Aug - Oct)</h5>
+                                <h5>TXON  (Aug 2024 - Oct 2024)</h5>
 <!--                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis eius assumenda consectetur veniam hic.</p> -->
                             </div>
                         </div>
